1/23/09 - encapsulate all symbols in ABSSymbols
1/23/09 - localize all acid and base names
1/23/09 - add molecule counts and pH to model
1/23/09 - model for base solutions
1/23/09 - model for pure water, acids, bases, acid solutions
1/20/09 - start fleshing out user interface of first module
1/19/09 - framework for all modules and persistence
1/12/09 - set up basic framework, based on sim-template
1/12/09 - changes log file created