@@ -2,5 +2,6 @@ package edu.colorado.phet.acidbasesolutions.model.bases;
 
 
 public interface IStrongBase extends IBase {
-    // marker interface
+   
+    public String getCationSymbol();
 }
